# sumtraits

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  TODO.md  main.nf  nextflow.config  pyproject.toml
clowm/: README.md  nextflow_schema.json  output.md  usage.md
scripts/: build_and_push.sh  build_e2e_reference.sh  create_reference_files.sh  install_db.py  install_taxonkit.py  run_sumtraits.sh  run_test_data.sh
src/sumtraits/: __init__.py  cli.py  community.py  config.py  processing.py  translate.py  workflow.py
tests/: test_cli.py  test_community.py  test_e2e.py  test_processing.py  test_translate.py  test_workflow.py
tests/data/input/: GTDB_genus_enterotype_truncated.tsv  NCBI_genus_enterotype_truncated.tsv  metaphlan4_default.txt  motus3_truncated.tsv
