[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sumtraits"
version = "0.1.0"
description = "Command-line tools for summarizing traits from taxonomic profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "taxonomic-profile-translator @ git+https://git.embl.org/robbani/taxonomic-profile-translator.git",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
sumtraits = "sumtraits.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
