[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "sumtraits"
version = "0.2.3"
description = "Command-line tools for summarizing traits from taxonomic profiles."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "pandas",
    "taxonomic-profile-translator @ git+https://git.embl.org/robbani/taxonomic-profile-translator.git@7a00d84c0202a76eb042ce25e631b99b71627210",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[project.scripts]
sumtraits = "sumtraits.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not e2e'"
markers = [
    "e2e: slower end-to-end pipeline tests, run explicitly with `pytest -m e2e`",
]
